front_end/ui/legacy/closeButton.css
/*
 * Copyright (c) 2015 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file.
 */

.close-button {
  width: 20px;
  height: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.close-button:hover .cross,
.close-button:focus-visible .cross {
  background-color: var(--icon-default-hover);
}

.close-button:active .cross {
  background-color: var(--icon-default);
}

.close-button:focus {
  outline: 2px solid var(--sys-color-state-focus-ring);
}

@media (forced-colors: active) and (prefers-color-scheme: dark) {
  .close-button {
    filter: brightness(100);
  }
}

